# cardano-dex-contracts

./: .gitignore  README.md  cabal.project  cabal.project.offchain  cabal.project.onchain  cardano-dex-contracts.cabal  cardano-dex.cabal  default.nix  flake.nix  hie.yaml  lq.txt  nft.txt  plutus-starter.cabal  release.nix  secp256k1-setup.sh  shell.nix  test1.policy
app/: Main.hs
cardano-dex-contracts-offchain/: cardano-dex-contracts-offchain.cabal  cardano-dex-contracts.cabal  hie.yaml
cardano-dex-contracts-offchain/Contracts/: deposit.uplc  pool.uplc  redeem.uplc  simpleStaking.uplc  swap.uplc  vesting.uplc  vestingWithPeriod.uplc
cardano-dex-contracts-offchain/ErgoDex/: PValidators.hs  Plutus.hs
cardano-dex-contracts-offchain/ErgoDex/Contracts/: Class.hs  Pool.hs  Typed.hs  Types.hs
cardano-dex-contracts-offchain/ErgoDex/Contracts/Proxy/: Deposit.hs  Order.hs  Redeem.hs  Swap.hs  Vesting.hs  VestingWithPeriod.hs
cardano-dex-contracts-offchain/test/: Spec.hs
cardano-dex-contracts-offchain/test/Tests/: Contracts.hs
cardano-dex-contracts-onchain/: cardano-dex-contracts-onchain.cabal  hie.yaml
cardano-dex-contracts-onchain/ErgoDex/: PConstants.hs  PMintingValidators.hs  PStakingValidators.hs  PValidators.hs
cardano-dex-contracts-onchain/ErgoDex/Contracts/: Pool.hs
cardano-dex-contracts-onchain/ErgoDex/Contracts/Proxy/: Deposit.hs  Order.hs  Redeem.hs  Swap.hs  Vesting.hs  VestingWithPeriod.hs
cardano-dex-contracts-onchain/ErgoDex/Contracts/Proxy/LqMining/Simple/: Deposit.hs  LMPool.hs  Redeem.hs  StakingBundle.hs
cardano-dex-contracts-onchain/ErgoDex/PContracts/: PApi.hs  PAssets.hs  PData.hs  PDeposit.hs  PMintingValidators.hs  POrder.hs  PPool.hs  PPoolStakeChangeMintPolicy.hs  PRedeem.hs  PSimpleStaking.hs  PStakingWithPkhLock.hs  PSwap.hs  PValidators.hs  PVesting.hs  PVestingWithPeriod.hs
cardano-dex-contracts-onchain/ErgoDex/PContracts/LqMining/Simple/: PDeposit.hs  PLMPool.hs  PRedeem.hs  PStakingBundle.hs
cardano-dex-contracts-onchain/PExtra/: API.hs  Ada.hs  Integer.hs  List.hs  Map.hs  Maybe.hs  Monadic.hs  Num.hs  PTriple.hs  Pair.hs  Time.hs
cardano-dex-contracts-onchain/test/: Eval.hs  Spec.hs
cardano-dex-contracts-onchain/test/Tests/: Api.hs  Deposit.hs  Pool.hs  Redeem.hs  StakeMinting.hs  Staking.hs  Swap.hs  Vesting.hs  VestingWithPeriod.hs
cardano-dex-contracts-onchain/test/Tests/LqMining/Simple/: Deposit.hs  LMPool.hs  Redeem.hs  StakingBundle.hs
contracts/: OnChain.hs  Types.hs
contracts/ergo/: OffChain.hs  OnChain.hs  ProxyContract.hs  Types.hs
docs/: CardanoAmmDex.md  VestingWithPeriod.md
nix/: default.nix  sources.json
nix/pkgs/: default.nix
nix/pkgs/haskell/: default.nix  haskell.nix
oldnix/: cabal.project.old  default.nix  release.nix  shell.nix
oldnix/nix/: default.nix
oldnix/nix/lib/: ci.nix
oldnix/nix/pkgs/haskell/: haskell.nix
src/: Utils.hs
src/Api/Backend/: Factory.hs  Utils.hs
src/Dex/: Types.hs
src/Dex/Contract/: Models.hs  OffChain.hs  OnChain.hs  Utils.hs
src/ErgoDex/: OffChain.hs  PMintingValidators.hs  PValidators.hs  Plutus.hs
src/ErgoDex/Contracts/: Class.hs  Coins.hs  Liquidity.hs  OffChain.hs  PPool.hs  Pool.hs  Typed.hs  Types.hs
src/ErgoDex/Contracts/Erased/: Coins.hs  Pool.hs  UnliftErased.hs
src/ErgoDex/Contracts/Erased/Proxy/: Deposit.hs  Redeem.hs  Swap.hs
src/ErgoDex/Contracts/Proxy/: Deposit.hs  OffChain.hs  Order.hs  PUtils.hs  PlutarchSwap.hs  Redeem.hs  Swap.hs
src/ErgoDex/Contracts/Proxy/Typed/: Deposit.hs  Redeem.hs  Swap.hs
src/ErgoDex/PContracts/: PApi.hs  PAssets.hs  PData.hs  PDeposit.hs  POrder.hs  PPlutusApi.hs  PPool.hs  PRedeem.hs  PStaking.hs  PSwap.hs
src/PExtra/: API.hs  Ada.hs  Integer.hs  List.hs  Map.hs  Maybe.hs  Monadic.hs  Num.hs  PTriple.hs  PUtils.hs  Pair.hs
src/Proxy/Contract/: Models.hs  Offchain.hs  OnChain.hs  Types.hs
test/: Eval.hs  Helper.hs  Matcher.hs  Spec.hs  cardano-dex-contracts-test.cabal.partial
test/Models/: Generator.hs  PGenerator.hs  Utils.hs
test/Tests/: Deposit.hs  Pool.hs  Redeem.hs  Swap.hs
test/Tests/Deposit/: FailureDepositPoolTests.hs  FailureDepositTests.hs  SuccessDepositTests.hs  SuccessfullDepositPoolTests.hs
