cabal-version:      2.4
name:               cardano-dex-contracts
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license:       CC0-1.0
license-files: LICENSE
author:        ErgoLabs
maintainer:    ilya.arcadich@gmail.com

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

flag defer-plugin-errors
    description:
        Defer errors from the plugin, useful for things like Haddock that can't handle it.
    default: False
    manual: True

common lang
    default-language:   Haskell2010
    default-extensions:
      NoStarIsType
      BangPatterns
      BinaryLiterals
      ConstrainedClassMethods
      ConstraintKinds
      DataKinds
      DeriveAnyClass
      DeriveDataTypeable
      DeriveFoldable
      DeriveFunctor
      DeriveGeneric
      DeriveLift
      DeriveTraversable
      DerivingStrategies
      DerivingVia
      DoAndIfThenElse
      EmptyCase
      EmptyDataDecls
      EmptyDataDeriving
      ExistentialQuantification
      ExplicitForAll
      FlexibleContexts
      FlexibleInstances
      ForeignFunctionInterface
      GADTSyntax
      GeneralisedNewtypeDeriving
      HexFloatLiterals
      ImplicitPrelude
      InstanceSigs
      KindSignatures
      LambdaCase
      MonomorphismRestriction
      MultiParamTypeClasses
      NamedFieldPuns
      NamedWildCards
      NumericUnderscores
      OverloadedStrings
      PartialTypeSignatures
      PatternGuards
      PolyKinds
      PostfixOperators
      RankNTypes
      RelaxedPolyRec
      RecordWildCards
      ScopedTypeVariables
      StandaloneDeriving
      StandaloneKindSignatures
      TraditionalRecordSyntax
      TupleSections
      TypeApplications
      TypeFamilies
      TypeOperators
      TypeSynonymInstances
      ViewPatterns

    ghc-options:
      -Wall -Wcompat -Wincomplete-uni-patterns -Wno-unused-do-bind
      -Wno-partial-type-signatures
      -Wunused-foralls -fprint-explicit-foralls
      -fprint-explicit-kinds

library
    import: lang
    exposed-modules:
      Utils
      ErgoDex.Plutus
      ErgoDex.Contracts.OffChain
      ErgoDex.Contracts.Types
      ErgoDex.Contracts.Pool
      ErgoDex.Contracts.Class
      ErgoDex.Contracts.Typed
      ErgoDex.Contracts.Proxy.OffChain
      ErgoDex.Contracts.Proxy.Order
      ErgoDex.Contracts.Proxy.Swap
      ErgoDex.Contracts.Proxy.Deposit
      ErgoDex.Contracts.Proxy.Redeem
      ErgoDex.Contracts.Proxy.Typed.Swap
      ErgoDex.Contracts.Proxy.Typed.Deposit
      ErgoDex.Contracts.Proxy.Typed.Redeem
      ErgoDex.PContracts.PPool
      PExtra.Num
      PExtra.Integer
      PExtra.Pair
      PExtra.Maybe
      PExtra.List
      PExtra.Monadic
      PExtra.Map
      PExtra.API
      PExtra.Ada
      ErgoDex.Contracts.Proxy.PlutarchSwap
      ErgoDex.Contracts.Proxy.PUtils
    build-depends:
      base >= 4.9 && < 5,
      aeson,
      bytestring,
      containers,
      freer-extras,
      playground-common,
      plutus-contract,
      plutus-tx-plugin,
      plutus-tx,
      plutus-ledger,
      plutarch==1.1.0,
      generics-sop==0.5.1.0,
      plutus-ledger-api,
      text,
      plutus-core
    hs-source-dirs: src

executable cardano-contracts-exe
  main-is: Main.hs
  hs-source-dirs: app
  build-depends:
      base >= 4.9 && < 5
    , cardano-dex-contracts
    , plutarch==1.1.0
    , rio
    , plutus-tx
    , plutus-core
    , plutus-ledger-api
    , text
  default-language: Haskell2010