cabal-version:      2.4
name:               cardano-dex-contracts
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license:       CC0-1.0
license-files: LICENSE
author:        ErgoLabs
maintainer:    ilya.arcadich@gmail.com

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

flag defer-plugin-errors
    description:
        Defer errors from the plugin, useful for things like Haddock that can't handle it.
    default: False
    manual: True

common lang
    default-language:   Haskell2010
    default-extensions:
      NoStarIsType
      BangPatterns
      BinaryLiterals
      ConstrainedClassMethods
      ConstraintKinds
      DataKinds
      DeriveAnyClass
      DeriveDataTypeable
      DeriveFoldable
      DeriveFunctor
      DeriveGeneric
      DeriveLift
      DeriveTraversable
      DerivingStrategies
      DerivingVia
      DoAndIfThenElse
      EmptyCase
      EmptyDataDecls
      EmptyDataDeriving
      ExistentialQuantification
      ExplicitForAll
      FlexibleContexts
      FlexibleInstances
      ForeignFunctionInterface
      GADTSyntax
      GeneralisedNewtypeDeriving
      HexFloatLiterals
      ImplicitPrelude
      InstanceSigs
      KindSignatures
      LambdaCase
      MonomorphismRestriction
      MultiParamTypeClasses
      NamedFieldPuns
      NamedWildCards
      NumericUnderscores
      OverloadedStrings
      PartialTypeSignatures
      PatternGuards
      PolyKinds
      PostfixOperators
      RankNTypes
      RelaxedPolyRec
      RecordWildCards
      ScopedTypeVariables
      StandaloneDeriving
      StandaloneKindSignatures
      TraditionalRecordSyntax
      TupleSections
      TypeApplications
      TypeFamilies
      TypeOperators
      TypeSynonymInstances
      ViewPatterns

    ghc-options:
      -Wall -Wcompat -Wincomplete-uni-patterns -Wno-unused-do-bind
      -Wno-partial-type-signatures
      -Wunused-foralls -fprint-explicit-foralls
      -fprint-explicit-kinds

library
    import: lang
    exposed-modules:
      ErgoDex.Plutus
      ErgoDex.Contracts.OffChain
      ErgoDex.Contracts.Types
      ErgoDex.Contracts.Pool
      ErgoDex.Contracts.Class
      ErgoDex.Contracts.Typed
      ErgoDex.Contracts.Proxy.OffChain
      ErgoDex.Contracts.Proxy.Order
      ErgoDex.Contracts.Proxy.Swap
      ErgoDex.Contracts.Proxy.Deposit
      ErgoDex.Contracts.Proxy.Redeem
      ErgoDex.Contracts.Proxy.Typed.Swap
      ErgoDex.Contracts.Proxy.Typed.Deposit
      ErgoDex.Contracts.Proxy.Typed.Redeem
      ErgoDex.PContracts.PApi
      ErgoDex.PContracts.POrder
      ErgoDex.PContracts.PPool
      ErgoDex.PContracts.PDeposit
      ErgoDex.PContracts.PData
      ErgoDex.PContracts.PSwap
      ErgoDex.PContracts.PRedeem
      ErgoDex.PContracts.PAssets
      ErgoDex.PValidators
      ErgoDex.PMintingValidators
      PExtra.Ada
      PExtra.Num
      PExtra.Integer
      PExtra.Pair
      PExtra.Maybe
      PExtra.List
      PExtra.Monadic
      PExtra.Map
      PExtra.API
      PExtra.PTriple

    build-depends:
      base >= 4.9 && < 5,
      aeson,
      bytestring,
      containers,
      plutus-tx,
      plutus-ledger-api,
      plutus-tx,
      plutus-tx-plugin,
      plutarch,
      generics-sop,
      text,
      plutus-core,
      transformers
    hs-source-dirs: src

test-suite cardano-dex-contracts-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  other-modules:
    Gen.Models
    Gen.DepositGen
    Gen.PoolGen
    Gen.DestroyGen
    Gen.SwapGen
    Gen.RedeemGen
    Gen.Utils
    Tests.Deposit
    Tests.Pool
    Tests.Swap
    Tests.Redeem
    Eval
  build-depends:
    , base >= 4.9 && < 5
    , HUnit
    , text
    , base16-bytestring
    , bytestring
    , plutus-ledger-api
    , random
    , plutus-tx
    , plutus-ledger-api
    , containers
    , random-strings
    , plutus-core
    , plutarch
    , hedgehog
    , rio
    , tasty-hunit
    , tasty
    , tasty-hedgehog