cabal-version:      2.4
name:               cardano-dex
version:            0.1.0.0

author:             ErgoLabs
maintainer:         

extra-source-files: CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/ergolabs/cardano-dex-sdk-haskell

common base
  build-depends: base >= 4.9 && < 5

common project-config
  default-language:     Haskell2010

library
    import: base, project-config

    hs-source-dirs: src
    
    exposed-modules: Proxy.Contract.OnChain
                     Proxy.Contract.Models
                     Utils
                     Dex.Contract.OffChain
                     Dex.Contract.OnChain
                     Dex.Contract.Models

    build-depends: 
        plutus-ledger,
        plutus-tx,
        plutus-ledger-api,
        playground-common,
        bytestring,
        aeson,
        plutus-contract,
        plutus-tx-plugin,
        plutus-core