cabal-version: 3.0
name:          cardano-dex-contracts-offchain
version:       0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license:       CC0-1.0
license-files: LICENSE
author:        ErgoLabs
maintainer:    ilya.arcadich@gmail.com
data-files:    deposit.uplc swap.uplc redeem.uplc pool.uplc
data-dir:      Contracts

constraints:
    aeson >= 2
  , hedgehog >= 1.1

allow-newer:
    *:aeson
  , size-based:template-haskell

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

flag defer-plugin-errors
  description:
    Defer errors from the plugin, useful for things like Haddock that can't handle it.

  default:     False
  manual:      True

common lang
  default-language:   Haskell2010
  default-extensions:
    NoStarIsType
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DoAndIfThenElse
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    GADTSyntax
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    ImplicitPrelude
    InstanceSigs
    KindSignatures
    LambdaCase
    MonomorphismRestriction
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    PolyKinds
    PostfixOperators
    RankNTypes
    RecordWildCards
    RelaxedPolyRec
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TraditionalRecordSyntax
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    ViewPatterns

  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns -Wno-unused-do-bind
    -Wno-partial-type-signatures -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds

library
  import:          lang
  other-modules:   Paths_cardano_dex_contracts_offchain
  autogen-modules: Paths_cardano_dex_contracts_offchain
  exposed-modules:
    ErgoDex.Contracts.Class
    ErgoDex.Contracts.Pool
    ErgoDex.Contracts.Proxy.Deposit
    ErgoDex.Contracts.Proxy.Order
    ErgoDex.Contracts.Proxy.Redeem
    ErgoDex.PValidators
    ErgoDex.Contracts.Proxy.Swap
    ErgoDex.Contracts.Typed
    ErgoDex.Contracts.Types
    ErgoDex.Plutus
  build-depends:
    , aeson
    , base >=4.9 && <5
    , bytestring
    , containers
    , generics-sop
    , plutus-ledger-api
    , plutus-tx
    , text
    , transformers
    , serialise

test-suite cardano-dex-contracts-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  other-modules:
    Tests.Contracts
  build-depends:
    , base
    , HUnit
    , cardano-dex-contracts-offchain
    , hedgehog
    , tasty-hunit
    , tasty
    , tasty-hedgehog

